# hive

./: .gitignore  .ignore  .tool-versions  AGENT.md  AGENTS.md  CONCEPTS.md  README.md  agent-browser.json  biome.json  bts.jsonc  bunfig.toml  commitlint.config.js  design-compact.md  design.md  dev.sh  hive.config.example.json  hive.config.example.jsonc  hive.config.example.ts  hive.config.json  hive.config.jsonc  hive.config.schema.json  hive.config.ts  mise.toml  opencode.json  package.json  setup-zsh.sh  skills-lock.json  synthetic.config.example.ts  synthetic.config.ts  test-desktop.sh  tsconfig.base.json  turbo.json
.changeset/: README.md
.github/: README.md
.github/scripts/: detect-changes.sh
.github/workflows/: ci.yml  pr-stats.yml  release-publish.yml  release-version-pr.yml  release.yml  ui-visual-regression.yml
.husky/: pre-commit  pre-push
.opencode/: package-lock.json
.opencode/commands/: usage-rules-update.md
.opencode/plugin/: ast-grep-plugin.ts  idle-notify.ts  idle-validate.json  idle-validate.schema.json  idle-validate.ts  todo-continuation-enforcer.ts
.opencode/prompts/: backend-expert.md  frontend-expert.md
.opencode/tool/: hive.ts
.ruler/: .gitignore  bts.md  ruler.toml
.ruler/prompts/: README.md  ai-tooling.md  api-patterns.md  backend.md  coding-guidelines.md  design.md  (+2 more)
docs/: index.md
scripts/: agent-browser.sh  check-secrets.sh  install.sh
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tmux/: dev.conf
(+834 files in other folders)
