[package]
name = "synthetic"
version = "0.1.0"
description = "Synthetic Desktop App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.9", features = [] }
tauri-plugin-opener = "2.5"
tauri-plugin-notification = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
